# FTP_line

./: CMakeLists.txt  README.md
Headers/: core_ftp.h  raw_commands.h
Sources/: main.c
Sources/RawCommands/: input_handle.c  user.c
Sources/Sockets/: connect.c  send_cmd.c
